# claude-remote

./: .gitignore  CHANGELOG.md  DEVELOPMENT_PLAN.md  PROJECT_STATUS.md  README.md  build-pkg.sh  gen-dmg-bg.js  gen-icons.js  generate-dmg-bg.js  package-lock.json
app/: package-lock.json  package.json
app/src/: index.html
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/icons/: gen-tray.html  icon.icns
app/src-tauri/src/: lib.rs
web/: .firebaserc  firebase.json
web/public/: chat.html  index.html  robots.txt  sitemap.xml
web/public/de/: index.html
web/public/es/: index.html
web/public/fr/: index.html
web/public/hi/: index.html
web/public/ja/: index.html
web/public/ko/: index.html
web/public/pt/: index.html
web/public/releases/: Claude Remote.app.tar.gz.sig  latest.json
web/public/ru/: index.html
web/public/tr/: index.html
web/public/uk/: index.html
web/public/zh/: index.html
