[package]
name = "claude-remote"
version = "0.1.0"
description = "Remote access to Claude Code from any device"
authors = ["aleksandr"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
dirs = "6"
png = "0.17"
hostname = "0.4"
p256 = { version = "0.13", features = ["ecdh"] }
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2.10.0"
